Fix threading issue with OSX 15.4